Lab04/lab4.txt
Sean Yin
304 936 424
Lab 4



PART 1:
Get coreutils from their website using command
wget https://web.cs.ucla.edu/classes/fall18/cs35L/assign/coreutils-with-bug.tar.gz

Unzip the file with the command
tar -xzvf coreutils-with-bug.tar.gz
Move into the folder and configure the path how you want exactly like the last lab we did
./configure --prefix=/u/eng/ugrad/seany/35L_P04/install
And finish it off with a good old
make



PART 2:
And it fails and you get this error

In file included from utimecmp.c:41:0:
utimens.h:2:5: error: conflicting types for 'futimens'
 int futimens (int, char const *, struct timespec const [2]);
     ^
In file included from utimecmp.h:25:0,
                 from utimecmp.c:25:
/usr/include/sys/stat.h:373:12: note: previous declaration of 'futimens' was here
 extern int futimens (int __fd, const struct timespec __times[2]) __THROW;
            ^

This failed because there are two functions with the same name
And then you get the patch file
wget https://web.cs.ucla.edu/classes/fall18/cs35L/assign/coreutils.diff

And you move that patch into the the coreutils folder and apply the patch

patch -p0 < coreutils.diff
make

This time it worked because the functions coreutils_futimens and coreutils_tee were renamed.  The functiton was replaced so there is no confliction anymore.

make install



PART 3:
Make a temp directory and create a couple of files with different dates and then see if they work or not

tmp=$(mktemp -d)
cd $tmp
touch -d '1918-11-11 11:00 GMT' wwi-armistice
touch now
sleep 1
touch now1
~/35L_P04/install/bin/ls -lt --full-time wwi-armistice now now1

-rw-r--r-- 1 seany engugrad 0 1918-11-11 03:00:00.000000000 -0800 wwi-armistice
-rw-r--r-- 1 seany engugrad 0 2018-10-26 20:32:08.142364544 -0700 now1
-rw-r--r-- 1 seany engugrad 0 2018-10-26 20:32:00.175096242 -0700 now

cd
rm -fr $tmp

The main issue is that the first line should actually be on the bottom because it is the oldest dated one.
The most recent file should be on top and the oldest file (which we created here) should be on the bottom.



PART 4:
Look through the manual for gdb because that's the debugger that they suggest that we use.
man gdb
Go into gdb and look through help in order to find out how to get all of the information and list all of the functions.
gdb ~/35L_P04/install/bin/ls
help
help all

Found out how to list all of the functions so we are going to do that
info functions

Find a possible function that we want to inspect for errors which is compare_mtime.  Then we set a breakpoint in the function and step around in the function to look for the function
break compare_mtime
run -lt
stepi

And get the function that would be giving us our issues
list

44         Assume the nanosecond components are in range, or close to it.  */
45      static inline int
46      timespec_cmp (struct timespec a, struct timespec b)
47      {
48        int diff = a.tv_sec - b.tv_sec;
49        return diff ? diff : a.tv_nsec - b.tv_nsec;
50      }

Since the subtraction has numbers that could possibly end up in integer overflow, which would result in a wrap around that gives us a time in the future, we've foudn our issue with the listing.
Then we just leave gdb and go back to the file where we have our buggy coreutils.



PART 5:
Create a copy of the function file that we are going to patch
cp lib/timespec.h patch
And start editing that file with emacs in order to fix the bug.  To do that, just take away the subtraction and use straight comparison to return a positive, negative, or 0 number.

if( a.tv_sec < b.tv_sec ){ return -1;}
else if(a.tv_sec == b.tv_sec){ return 0;}
else{ return 1;}

And then exit out of emacs and create a patch file usin diff -u
diff -u lib/timespec.h patch > time.diff

And then you want a change log
C-x 4 a



PART 6:
Test all of this again but not from a temp directory like last time
Just go put it whereever I want in the linux system

touch -d '1918-11-11 11:00 GMT' wwi-armistice
touch now
sleep 1
touch now1
ls -lt --full-time wwi-armistice now now1

-rw-r--r-- 1 seany engugrad 0 2054-12-17 09:28:16.000000000 -0800 wwi-armistice
-rw-r--r-- 1 seany engugrad 0 2018-10-26 22:15:50.143336000 -0700 now1
-rw-r--r-- 1 seany engugrad 0 2018-10-26 22:15:42.314608000 -0700 now

It does pretty much the same as the failure version of coreutils, but now instead of listing the old date, when the number wraps around and doesn't consider the negative return from the function
so instead it wraps you around to the future and also returns that future time that becomes 2054.
